# tests-templatious

./: .gitmodules  .travis.yml  CMakeLists.txt  ChainFunctor.cpp  ChainFunctor.h  ChainUsageTests.cpp  ChainUsageTests.h  CollectionAdapter.h  CollectionAdapter.hpp  CollectionRepeater.cpp  CollectionRepeater.h  DistributorTests.cpp  DistributorTests.h  DynamicVPackFactory.cpp  IterDumpTests.cpp  IterDumpTests.h  LogicPrimitives.h  Makefile  MoveTests.hpp  OnceTraversable.cpp  OnceTraversable.h  PackTests.cpp  PackTests.h  Proxies.h  Proxies.hpp  ProxyMiscTests.cpp  README.md  SelectTests.cpp  SelectTests.h  Sequence.cpp  Sequence.h  StaticFactoryTests.cpp  StaticFactoryTests.h  StaticManipulatorTests.cpp  StaticManipulatorTests.h  TestAlgs.h  TestAlgs.hpp  TestDefs.h  TestDefs.hpp  TypeLists.cpp  (+9 more)
detail/: CCountColTest.h  CCountColTest.hpp  ConstructorCountCollection.h  ConstructorCountCollection.hpp
spec/: StaticVector.cpp  StaticVector.h  StdDeque.cpp  StdForwardList.cpp  StdList.cpp  StdList.h  StdVector.cpp  StdVector.h
